<resources>
    <string name="app_name">Noted</string>
    <string name="box">M0,0h12v12h-12z</string>
    <string name="hint_title">Title</string>
    <string name="title_hint">Title</string>
    <string name="note_placeholder">Note</string>
    <string name="switch_list_display">Switch List Display</string>
    <string name="save_note">Save Note</string>
    <string name="date_time_string_format">MMM dd, yyyy hh:mm a</string>
    <string name="edited">Edited %1$s</string>
    <string name="send">Send</string>
    <string name="make_a_copy">Make a Copy</string>
    <string name="delete">Delete</string>
    <string name="menu_icon_desc">Overflow options menu icon</string>
    <string name="hello">Hello,</string>
    <string name="good_afternoon">Good Afternoon 🌞</string>
    <string name="good_morning">Good Morning 🌄</string>
    <string name="good_evening">Good Evening 🌅</string>
    <string name="good_night">Good Night 🌃</string>
    <string name="good_day">Good Day!</string>


    <string name="cross_line">M52,52 L12,12</string>

    <string name="burger_menu_top_path_line">M8,0 C 13,0 53,0 56,0</string>
    <string name="burger_menu_top_path_curve">M8,0 C 13,-22 51,-22 56,0</string>
    <string name="burger_menu_drip_path">M42,0 l4,5 l4,-5z</string>
    <string name="encrypt_note">Lock Note</string>
    <string name="search">Search</string>
    <string name="empty_notes">You haven\'t saved any note</string>
    <string name="empty_voice_notes">You haven\'t saved any voice note</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>


    <string name="menu_home">Notes</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_trash">Trash</string>
    <string name="others">Others</string>
    <string name="empty_trash">Your Trash Is Empty</string>

    <string name="theme_header">Theme</string>
    <string name="theme_sub">Change App theme</string>

    <string name="pref_theme_key">theme</string>
    <string name="mode_day">MODE_NIGHT_NO</string>
    <string name="mode_night">MODE_NIGHT_YES</string>
    <string name="mode_auto">MODE_NIGHT_AUTO_BATTERY</string>
    <string name="mode_system">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="made_by">Created with ❤️ by Desmond Ngwuta</string>
    <string name="default_selection_count">%1$s Selected</string>

    <string name="restore">Restore</string>
    <string name="undo">Undo</string>
    <string name="about">About</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="dont_forget">Try not to forget your password 🙏</string>
    <string name="lock_note">Secure note</string>
    <string name="key_to_decrypt">Create a password to lock this note</string>
    <string name="lock">Lock</string>
    <string name="password_hint">Password</string>
    <string name="unlock_note">Unlock this note</string>
    <string name="enter_key_to_unlock">Enter password to unlock note</string>
    <string name="unlock">Unlock</string>

    <string name="note_locked">Note locked 🔒</string>
    <string name="note_unlocked">Note unlocked 🔓</string>
    <string name="voice_notes">Voice Notes</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right_pause">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>

    <string name="unlock_instruction">Unlock to view content</string>
    <string name="lock_indicator">Note Locked</string>
    <string name="trash_info">Notes in Trash are deleted after 7 days</string>
    <string name="create_new_note_icon_desc">Create New Note Icon</string>
    <string name="create_new_voice_note_icon_desc">Create New Vooice Note Icon</string>
    <string name="clear_trash_icon_desc">Clear Trash Icon</string>

    <string name="stop_recording">Stop Recording</string>
    <string name="recording_cancelled">Operation cancelled!</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_voice_note">New Voice Note</string>
    <string name="new_name_instruction">Enter a new name for your note file</string>
    <string name="new_name_hint">ABCD</string>
    <string name="file_extension">.mp3</string>
    <string name="rename">Rename</string>
    <string name="progress_info">Renaming your note file. Please wait..</string>

    <string name="licence">
    <b>Copyright 2021 Desmond Ngwuta</b> \n\n

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at \n

       <b>http://www.apache.org/licenses/LICENSE-2.0</b>\n

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" <b>BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND</b>, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    </string>
    <string name="author">Desmond Ngwuta</string>
    <string name="libraries">
        <b>Jetpack</b>:\n
        <b>Android KTX</b> - provide concise, idiomatic Kotlin to Jetpack and Android platform APIs.\n
        <b>AndroidX</b> - major improvement to the original Android Support Library which is no longer maintained.\n
        <b>Data Binding</b> - allows you to bind UI components in your layouts to data sources in your app using a declarative format rather than programmatically.\n
        <b>ViewBinding</b>(https://developer.android.com/topic/libraries/view-binding) - allows you to more easily write code that interacts with views.\n
        <u>Plugins</u>:\n
        - Firebase-Crashlytics
    </string>
    <string name="least_keys">Your SecretKey must be at least 8 characters</string>
</resources>
