<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_write_tiny"
            android:title="@string/menu_home" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/menu_trash" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>