<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <Button
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:icon="@drawable/ic_delete_black_24dp" />

        <Button
            android:id="@+id/copy_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_a_copy"
            app:icon="@drawable/ic_content_copy" />

        <Button
            android:id="@+id/send_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:icon="@drawable/ic_share" />

    </LinearLayout>
</layout>