<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/options_bottom_sheet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:orientation="vertical"
        android:padding="20dp"
        android:theme="@style/AppTheme"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/pageLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/lock_note"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/dont_forget"
            android:textColor="@color/primaryTextColor"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_hint"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:hintAnimationEnabled="false"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secretKeyField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textVisiblePassword"
                android:textColor="@color/primaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lock"
            android:textColor="@color/secondaryTextColor"
            app:backgroundTint="@color/primaryColor"
            app:cornerRadius="8dp" />

    </LinearLayout>

</layout>