<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="trashViewModel"
            type="com.chydee.notekeeper.ui.trash.TrashViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.trash.TrashFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/trashDisclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/trash_info"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trashDisclaimer"
                    app:spanCount="2"
                    tools:listitem="@layout/item_trash" />

                <TextView
                    android:id="@+id/emptyTrashState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/empty_trash"
                    android:textAlignment="gravity"
                    android:textColor="@color/secondaryColor"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_anchorGravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/clearTrash"
            style="@style/Widget.MaterialComponents.FloatingActionButton.Custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/clear_trash_icon_desc"
            app:srcCompat="@drawable/ic_delete" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>